<resources>
    <string name="app_name">Juergapp</string>
    <string name="events">Eventos</string>
    <string name="drinks">Tragos</string>
    <string name="games">Juegos</string>
    <string name="music">Musica</string>
    <string name="profile">Mi Perfil</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mock_name_text">nombre_mock</string>
    <string name="appwidget_text">Ejemplo</string>
    <string name="add_widget">Añadir Widget</string>
    <string name="title_activity_login">Ingresa</string>
    <string name="prompt_email">Correo Electrónico</string>
    <string name="action_sign_in">Ingresa o Regístrate</string>
    <string name="action_sign_in_short">Ingresa</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">La contraseña debe de tener más de 5 caracteres</string>
    <string name="login_failed">Ingreso falló, Inténtalo nuevamente.</string>
    <string name="mock_description_text">Descripción</string>
    <string name="prompt_password">Contraseña</string>
    <string name="profile_name_lastname" translatable="false">Franco Rivera</string>
    <string name="settings_label">Ajustes</string>
    <string name="sign_out_label">Cerrar Sesión</string>
    <string name="create_event">Crear un Evento</string>
    <string name="select_a_drink">Selecciona un tipo de trago</string>
    <string name="event_name_label">Nombre del evento</string>
    <string name="event_description_label">Descripcion</string>
    <string name="event_address_label">Direccion</string>
    <string name="event_date">Fecha del Evento</string>
    <string name="cart">Carrito</string>
    <string name="content_string">Estas comprando</string>
    <string name="ordernar">Ordernar</string>
    <string name="no_intrent_label">No tienes internet :(</string>
    <string name="invite_contacts_title">Invitar a...</string>
</resources>
