<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.UserProfileFragment"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
    >
        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@mipmap/event_image_placeholder"
                   android:scaleType="centerCrop"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_margin"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/profile_name_lastname"/>
        <Button
                android:id="@+id/settings_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_label"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_recycler_view"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"/>
    <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_label"
            android:padding="@dimen/medium_margin"
            android:layout_margin="@dimen/medium_margin"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
    />
</LinearLayout>